devtools/client/themes/animationinspector.css
.
theme
-
dark
{
-
-
even
-
animation
-
timeline
-
background
-
color
:
rgba
(
255
255
255
0
.
03
)
;
-
-
command
-
pick
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
command
-
pick
.
svg
)
;
-
-
pause
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
pause
.
svg
)
;
-
-
rewind
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
rewind
.
svg
)
;
-
-
play
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
play
.
svg
)
;
}
.
theme
-
light
{
-
-
even
-
animation
-
timeline
-
background
-
color
:
rgba
(
128
128
128
0
.
03
)
;
-
-
command
-
pick
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
command
-
pick
.
svg
)
;
-
-
pause
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
pause
.
svg
)
;
-
-
rewind
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
rewind
.
svg
)
;
-
-
play
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
play
.
svg
)
;
}
.
theme
-
firebug
{
-
-
even
-
animation
-
timeline
-
background
-
color
:
rgba
(
128
128
128
0
.
03
)
;
-
-
command
-
pick
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
firebug
/
command
-
pick
.
svg
)
;
-
-
pause
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
firebug
/
pause
.
svg
)
;
-
-
rewind
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
firebug
/
rewind
.
svg
)
;
-
-
play
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
firebug
/
play
.
svg
)
;
}
:
root
{
-
-
toolbar
-
height
:
20px
;
-
-
timeline
-
sidebar
-
width
:
200px
;
-
-
timeline
-
animation
-
height
:
20px
;
-
-
keyframes
-
marker
-
size
:
10px
;
-
-
time
-
graduation
-
border
-
color
:
rgba
(
128
136
144
.
5
)
;
}
.
animation
{
-
-
timeline
-
border
-
color
:
var
(
-
-
theme
-
body
-
color
)
;
-
-
timeline
-
background
-
color
:
var
(
-
-
theme
-
splitter
-
color
)
;
}
.
animation
.
cssanimation
{
-
-
timeline
-
border
-
color
:
var
(
-
-
theme
-
highlight
-
lightorange
)
;
-
-
timeline
-
background
-
color
:
var
(
-
-
theme
-
contrast
-
background
)
;
}
.
animation
.
csstransition
{
-
-
timeline
-
border
-
color
:
var
(
-
-
theme
-
highlight
-
bluegrey
)
;
-
-
timeline
-
background
-
color
:
var
(
-
-
theme
-
highlight
-
blue
)
;
}
.
animation
.
scriptanimation
{
-
-
timeline
-
border
-
color
:
var
(
-
-
theme
-
highlight
-
green
)
;
-
-
timeline
-
background
-
color
:
var
(
-
-
theme
-
graphs
-
green
)
;
}
html
{
height
:
100
%
;
}
body
{
margin
:
0
;
padding
:
0
;
display
:
flex
;
flex
-
direction
:
column
;
height
:
100
%
;
overflow
:
hidden
;
color
:
var
(
-
-
theme
-
content
-
color3
)
;
}
#
global
-
toolbar
#
timeline
-
toolbar
{
border
-
bottom
:
1px
solid
var
(
-
-
theme
-
splitter
-
color
)
;
display
:
flex
;
flex
-
direction
:
row
;
align
-
items
:
center
;
justify
-
content
:
flex
-
end
;
height
:
var
(
-
-
toolbar
-
height
)
;
}
#
timeline
-
toolbar
{
display
:
none
;
justify
-
content
:
flex
-
start
;
}
[
timeline
]
#
global
-
toolbar
{
display
:
none
;
}
[
timeline
]
#
timeline
-
toolbar
{
display
:
flex
;
}
#
players
{
height
:
calc
(
100
%
-
var
(
-
-
toolbar
-
height
)
)
;
overflow
:
auto
;
}
[
empty
]
#
players
{
display
:
none
;
}
#
error
-
message
{
padding
-
top
:
10
%
;
text
-
align
:
center
;
flex
:
1
;
overflow
:
auto
;
display
:
none
;
}
[
empty
]
#
error
-
message
{
display
:
block
;
}
#
global
-
toolbar
>
*
#
timeline
-
toolbar
>
*
{
min
-
height
:
var
(
-
-
toolbar
-
height
)
;
border
-
color
:
var
(
-
-
theme
-
splitter
-
color
)
;
border
-
width
:
0
0
0
1px
;
display
:
flex
;
justify
-
content
:
center
;
align
-
items
:
center
;
}
#
global
-
toolbar
.
label
#
timeline
-
toolbar
.
label
{
padding
:
0
5px
;
border
-
style
:
solid
;
}
#
global
-
toolbar
.
devtools
-
button
#
timeline
-
toolbar
.
devtools
-
button
{
margin
:
0
;
padding
:
0
;
}
#
timeline
-
toolbar
.
devtools
-
button
#
timeline
-
toolbar
.
label
{
border
-
width
:
0
1px
0
0
;
}
#
element
-
picker
:
:
before
{
background
-
image
:
var
(
-
-
command
-
pick
-
image
)
;
}
.
pause
-
button
:
:
before
{
background
-
image
:
var
(
-
-
pause
-
image
)
;
}
#
rewind
-
timeline
:
:
before
{
background
-
image
:
var
(
-
-
rewind
-
image
)
;
}
.
pause
-
button
.
paused
:
:
before
{
background
-
image
:
var
(
-
-
play
-
image
)
;
}
#
timeline
-
rate
select
.
devtools
-
button
{
-
moz
-
appearance
:
none
;
text
-
align
:
center
;
font
-
family
:
inherit
;
color
:
var
(
-
-
theme
-
body
-
color
)
;
font
-
size
:
1em
;
position
:
absolute
;
top
:
0
;
left
:
0
;
width
:
100
%
;
height
:
100
%
;
background
-
image
:
url
(
"
chrome
:
/
/
devtools
/
skin
/
images
/
dropmarker
.
svg
"
)
;
background
-
repeat
:
no
-
repeat
;
background
-
position
:
calc
(
100
%
-
4px
)
center
;
padding
-
right
:
1em
;
}
#
timeline
-
rate
{
position
:
relative
;
width
:
4
.
5em
;
}
.
animation
-
timeline
{
height
:
100
%
;
overflow
:
hidden
;
position
:
relative
;
display
:
flex
;
flex
-
direction
:
column
;
}
.
animation
-
timeline
.
track
-
container
{
position
:
absolute
;
top
:
0
;
left
:
var
(
-
-
timeline
-
sidebar
-
width
)
;
right
:
var
(
-
-
keyframes
-
marker
-
size
)
;
height
:
var
(
-
-
timeline
-
animation
-
height
)
;
}
.
animation
-
timeline
.
scrubber
-
wrapper
{
z
-
index
:
2
;
pointer
-
events
:
none
;
height
:
100
%
;
}
.
animation
-
timeline
.
scrubber
{
position
:
absolute
;
height
:
100
%
;
width
:
0
;
border
-
right
:
1px
solid
red
;
box
-
sizing
:
border
-
box
;
}
.
animation
-
timeline
.
scrubber
:
:
before
{
content
:
"
"
;
position
:
absolute
;
top
:
0
;
width
:
1px
;
right
:
-
6px
;
border
-
top
:
5px
solid
red
;
border
-
left
:
5px
solid
transparent
;
border
-
right
:
5px
solid
transparent
;
}
.
animation
-
timeline
.
scrubber
.
scrubber
-
handle
{
position
:
absolute
;
height
:
100
%
;
top
:
0
;
width
:
6px
;
right
:
-
3px
;
cursor
:
col
-
resize
;
pointer
-
events
:
all
;
}
.
animation
-
timeline
.
time
-
header
{
min
-
height
:
var
(
-
-
toolbar
-
height
)
;
cursor
:
col
-
resize
;
-
moz
-
user
-
select
:
none
;
}
/* ... */

