Bug 1229340 - Move animation inspector scrollbar to timeline container r=pbro
MozReview-Commit-ID: DT37WGBXTiS

UltraBlame original commit: 17ba38d33d7b2dc38ac300006ceac88776b36d7d

--- a/devtools/client/themes/animationinspector.css
+++ b/devtools/client/themes/animationinspector.css
@@ -791,6 +791,14 @@ height
 )
 ;
 overflow
+-
+x
+:
+hidden
+;
+overflow
+-
+y
 :
 auto
 ;
@@ -1227,15 +1235,6 @@ animation
 -
 timeline
 {
-height
-:
-100
-%
-;
-overflow
-:
-hidden
-;
 position
 :
 relative
@@ -1317,17 +1316,35 @@ scrubber
 -
 wrapper
 {
-z
--
-index
+position
 :
-2
+absolute
 ;
-pointer
--
-events
+left
 :
-none
+var
+(
+-
+-
+timeline
+-
+sidebar
+-
+width
+)
+;
+right
+:
+var
+(
+-
+-
+keyframes
+-
+marker
+-
+size
+)
 ;
 height
 :
@@ -1342,10 +1359,42 @@ timeline
 .
 scrubber
 {
+z
+-
+index
+:
+5
+;
+pointer
+-
+events
+:
+none
+;
 position
 :
 absolute
 ;
+height
+:
+calc
+(
+100vh
+-
+var
+(
+-
+-
+toolbar
+-
+height
+)
+-
+1px
+)
+;
+min
+-
 height
 :
 100
@@ -1378,6 +1427,54 @@ animation
 timeline
 .
 scrubber
+.
+scrubber
+-
+handle
+{
+position
+:
+absolute
+;
+height
+:
+100
+%
+;
+width
+:
+6px
+;
+right
+:
+-
+1
+.
+5px
+;
+cursor
+:
+col
+-
+resize
+;
+pointer
+-
+events
+:
+all
+;
+}
+.
+animation
+-
+timeline
+.
+scrubber
+.
+scrubber
+-
+handle
 :
 :
 before
@@ -1389,7 +1486,7 @@ content
 ;
 position
 :
-absolute
+sticky
 ;
 top
 :
@@ -1398,11 +1495,6 @@ top
 width
 :
 1px
-;
-right
-:
--
-6px
 ;
 border
 -
@@ -1434,52 +1526,6 @@ animation
 -
 timeline
 .
-scrubber
-.
-scrubber
--
-handle
-{
-position
-:
-absolute
-;
-height
-:
-100
-%
-;
-top
-:
-0
-;
-width
-:
-6px
-;
-right
-:
--
-3px
-;
-cursor
-:
-col
--
-resize
-;
-pointer
--
-events
-:
-all
-;
-}
-.
-animation
--
-timeline
-.
 time
 -
 header
@@ -1492,7 +1538,9 @@ var
 (
 -
 -
-toolbar
+timeline
+-
+animation
 -
 height
 )
@@ -1522,27 +1570,193 @@ time
 -
 header
 .
-time
+header
 -
-tick
+item
 {
 position
 :
 absolute
 ;
-top
-:
-0
-;
 height
 :
-100vh
+100
+%
 ;
 padding
 -
 top
 :
 3px
+;
+border
+-
+left
+:
+0
+.
+5px
+solid
+var
+(
+-
+-
+time
+-
+graduation
+-
+border
+-
+color
+)
+;
+}
+.
+animation
+-
+timeline
+.
+header
+-
+wrapper
+{
+position
+:
+sticky
+;
+top
+:
+0
+;
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+background
+)
+;
+border
+-
+bottom
+:
+1px
+solid
+var
+(
+-
+-
+time
+-
+graduation
+-
+border
+-
+color
+)
+;
+z
+-
+index
+:
+3
+;
+height
+:
+var
+(
+-
+-
+timeline
+-
+animation
+-
+height
+)
+;
+overflow
+:
+hidden
+;
+}
+.
+animation
+-
+timeline
+.
+time
+-
+body
+{
+height
+:
+100
+%
+;
+}
+.
+animation
+-
+timeline
+.
+time
+-
+body
+.
+time
+-
+tick
+{
+-
+moz
+-
+user
+-
+select
+:
+none
+;
+position
+:
+absolute
+;
+width
+:
+0
+;
+height
+:
+100
+%
+;
+min
+-
+height
+:
+calc
+(
+100vh
+-
+var
+(
+-
+-
+timeline
+-
+animation
+-
+height
+)
+-
+1px
+)
 ;
 border
 -
@@ -1583,33 +1797,6 @@ height
 100
 %
 ;
-overflow
--
-y
-:
-auto
-;
-overflow
--
-x
-:
-hidden
-;
-margin
--
-top
-:
-var
-(
--
--
-timeline
--
-animation
--
-height
-)
-;
 padding
 :
 0
@@ -1622,24 +1809,11 @@ type
 :
 none
 ;
-border
+margin
 -
 top
 :
-1px
-solid
-var
-(
--
--
-time
--
-graduation
--
-border
--
-color
-)
+0
 ;
 }
 .
